--- a/requirements.txt
+++ b/requirements.txt
@@ -21,13 +21,14 @@ nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.6.0
 numpy==1.15.0
-pandas==0.23.3
+pandas==0.23.4
 pandocfilters==1.4.2
 parso==0.3.1
 pexpect==4.6.0
 pickleshare==0.7.4
 prometheus-client==0.3.1
 prompt-toolkit==1.0.15
+psycopg2==2.7.5
 ptyprocess==0.6.0
 Pygments==2.2.0
 python-dateutil==2.7.3
