--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ pickleshare==0.7.4
 prometheus-client==0.3.1
 prompt-toolkit==1.0.15
 psycopg2==2.7.5
+psycopg2-binary==2.7.5
 ptyprocess==0.6.0
 Pygments==2.2.0
 python-dateutil==2.7.3
@@ -38,10 +39,12 @@ qtconsole==4.3.1
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
+SQLAlchemy==1.2.10
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.1
 traitlets==4.3.2
 wcwidth==0.1.7
 webencodings==0.5.1
+whitenoise==4.0
 widgetsnbextension==3.3.1
