--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ backcall==0.1.0
 bleach==2.1.3
 decorator==4.3.0
 Django==2.1
+django-widget-tweaks==1.4.2
 entrypoints==0.2.3
 html5lib==1.0.1
+intermine==1.10.0
 ipykernel==4.8.2
 ipython==6.5.0
 ipython-genutils==0.2.0
@@ -24,6 +26,7 @@ numpy==1.15.0
 pandas==0.23.4
 pandocfilters==1.4.2
 parso==0.3.1
+patsy==0.5.0
 pexpect==4.6.0
 pickleshare==0.7.4
 prometheus-client==0.3.1
@@ -36,10 +39,12 @@ python-dateutil==2.7.3
 pytz==2018.5
 pyzmq==17.1.0
 qtconsole==4.3.1
+scipy==1.1.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
 SQLAlchemy==1.2.10
+statsmodels==0.9.0
 terminado==0.8.1
 testpath==0.3.1
 tornado==5.1
