--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 backcall==0.1.0
 bleach==2.1.3
 decorator==4.3.0
+dj-database-url==0.5.0
 Django==2.1.2
 django-widget-tweaks==1.4.2
 entrypoints==0.2.3
