--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,17 @@
+amqp==2.5.1
 backcall==0.1.0
+billiard==3.6.1.0
 bleach==2.1.3
+celery==4.3.0
+cycler==0.10.0
 decorator==4.3.0
 dj-database-url==0.5.0
 Django==2.1.2
+django-kombu==0.9.4
 django-widget-tweaks==1.4.2
 entrypoints==0.2.3
 html5lib==1.0.1
+importlib-metadata==0.22
 intermine==1.10.0
 ipykernel==4.8.2
 ipython==6.5.0
@@ -18,8 +24,12 @@ jupyter==1.0.0
 jupyter-client==5.2.3
 jupyter-console==5.2.0
 jupyter-core==4.4.0
+kiwisolver==1.0.1
+kombu==4.6.4
 MarkupSafe==1.0
+matplotlib==3.0.2
 mistune==0.8.3
+more-itertools==7.2.0
 nbconvert==5.3.1
 nbformat==4.4.0
 notebook==5.6.0
@@ -36,11 +46,14 @@ psycopg2==2.7.5
 psycopg2-binary==2.7.5
 ptyprocess==0.6.0
 Pygments==2.2.0
+pyparsing==2.3.1
 python-dateutil==2.7.3
 pytz==2018.5
 pyzmq==17.1.0
 qtconsole==4.3.1
+redis==3.3.8
 scipy==1.1.0
+seaborn==0.9.0
 Send2Trash==1.5.0
 simplegeneric==0.8.1
 six==1.11.0
@@ -50,7 +63,9 @@ terminado==0.8.1
 testpath==0.3.1
 tornado==5.1
 traitlets==4.3.2
+vine==1.3.0
 wcwidth==0.1.7
 webencodings==0.5.1
 whitenoise==3.3.1
 widgetsnbextension==3.3.1
+zipp==0.6.0
