--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ Genome Log.csv
 Artigos/
 backup/Dump 2019-09-14.sql
 PhytoProm/local_settings.py
+ecr/templates/data/
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
